# rp2040kit

02_HW/: RP2040-cache.lib  RP2040.kicad_pcb  RP2040.pro  RP2040.sch  RP2040.sch-bak  RP2040_BOM.csv  RP2040_POS.csv  fp-info-cache  fp-lib-table
02_HW/RP2040.pretty/: SOIC8_SOP8.kicad_mod
02_HW/gerber/: RP2040-Bottom_Cu.gbr  RP2040-Bottom_Mask.gbr  RP2040-Bottom_Paste.gbr  RP2040-Bottom_Silk.gbr  RP2040-EdgeCuts.gbr  RP2040-NPTH.drl  RP2040-PTH.drl  RP2040-Top_Cu.gbr  RP2040-Top_Mask.gbr  RP2040-Top_Paste.gbr  RP2040-Top_Silk.gbr  RP2040-inner1.gbr  RP2040-inner2.gbr
03_SW/: CMakeLists.txt  dut.c  dut.h  icp.c  icp.h  includes.h  led.c  led.h  main.c  main.h  program.c  program.h  task_usb.c  task_usb.h  tmp117.c  tmp117.h
